# zenus_os

./: .env.backup  .env.example  .gitignore  .gitignore.new  ANTHROPIC_INTEGRATION.md  ARCHITECTURE.md  BONUS_FEATURES.md  BUDGET_ROADMAP.md  CHANGELOG.md  DATA_VISUALIZATION_GUIDE.md  DEPENDENCY_FIX.md  EDGE_CASE_FIXES.md  ERROR_HANDLING_GUIDE.md  FEATURE_SUMMARY_v0.5.0.md  GO_BIG_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALL_FIXES.md  IN_PLACE_REFACTOR.md  MIGRATION.md  MONOREPO_REFACTOR_SUMMARY.md  PHASE1_COMPLETE.md  PHASE1_FINAL.md  README.md  REMAINING_BUDGET_OPTIONS.md  RESULT_CACHING_FIX.md  REVOLUTIONARY_FEATURES.md  ROADMAP.md  SELF_REFLECTION_GUIDE.md  SETUP.md  STATUS.md  STREAMING_AND_LOOPS_FIX.md  STREAMING_FIX.md  STREAMING_REFLECTION_FIX.md  TODO.md  TROUBLESHOOTING.md  V0.4.0_RELEASE.md  apply_monorepo.sh  config.yaml.example  fix_config.sh  install.sh  (+13 more)
.github/workflows/: ci.yml  pr-check.yml  publish.yml  (+2 more)
docs/: ARCHITECTURE.md  AUTO_DETECTION.md  CONFIGURATION.md  CONFIG_MIGRATION.md  FAILURE_LEARNING.md  FEATURES.md  FEEDBACK.md  FUTURE_ARCHITECTURE.md  ITERATIVE_MODE.md  MULTI_AGENT_MONITORING.md  OLLAMA_TUNING.md  PHASES_3_TO_6_SUMMARY.md  PHASE_3_TO_6.md  PROGRESS.md  PUBLISHING.md  SEMANTIC_SEARCH.md  STATUS.md  STREAMING.md  TESTING.md  TOOLS.md  TROUBLESHOOTING.md  UNDO_ROLLBACK.md  VOICE_TESTING.md  advances.md
memory/: 2026-02-24-evening.md  2026-02-24.md
scripts/: publish.sh  test-all.sh
snap/: snapcraft.yaml
src/: main.py
tests/: conftest.py  test_action_tracker.py  test_failure_analyzer.py  test_planner.py  test_task_analyzer.py
(+77 files in other folders)
